# MINIAgent

./: .env.example  LICENSE  README.md  README.zh-CN.md  UPGRADE_NOTES.md  a2a_test.py  agent.py  agent_context_memory_test.py  agent_memory_test.py  agent_test.py  pyproject.toml  real_api_contract_smoke_test.py  requirements.txt  run_all_tests.py  run_real_tests.py  run_research_agent_scenarios.py  skill_test.py
a2a_runtime/: __init__.py  card.py  client.py  models.py  server.py
agent_core/: __init__.py  agent.py  context.py  planners.py  tool_runtime.py
agent_core/memory/: extractors.py  models.py  repository.py  retriever.py  store.py  summarizers.py  token_counter.py
config/: agent.yaml
docs/: architecture.md  context_memory_design.md  migration_report.md
langgraph_agent/agent/: __init__.py  base.py  result.py  runtime.py
llm_runtime/: __init__.py  base.py  mcp_contract.py  openai_client.py
memory/: l0_policy.md  l1_index.md  l2_facts.md
prompt_runtime/: base.py
real_scenarios/: README.md
skill_engine/: __init__.py  frontmatter.py  loader.py  models.py  selector.py  skills_ref.py  validator.py
tests/: test_agent_architecture.py
tests_offline/: 01_import_and_config.py  02_tools_files_shell.py  03_memory_context.py  04_agent_loop_fake_llm.py
tests_real/: 01_llm_smoke.py  02_tool_file_patch.py  03_code_run.py  04_memory_recall.py  05_context_long_task.py  06_agent_end_to_end.py  README.md  _bootstrap.py
v0/: PATCH_REPORT.md  __init__.py  agent.py  context_runtime_api_demo.py
v1/: README.md  run_research_agent_scenarios.py
(+178 files in other folders)
