[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniagent"
version = "1.0.0"
description = "A modular OpenAI + Langfuse GenericAgentCore implementation for MINIAgent research."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.93.0",
  "langfuse>=4.0.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
v1 = [
  "langgraph>=0.6.0",
  "langchain>=1.0.0",
  "langchain-openai>=0.3.0",
  "langchain-mcp-adapters>=0.1.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "pydantic>=2.7.0",
  "jsonschema>=4.22.0",
]

test-real = [
  "openai>=1.93.0",
  "langfuse>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
